<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/top_bar_bg" >

        <TextView
            style="@style/textStye"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_ziliao"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/save_zi_liao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:text="保存"
            android:textColor="@color/white"
            android:textSize="18dip" />

        <ImageButton
            android:id="@+id/add_zi_liao_back_iv"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:src="@drawable/back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/textStye"
                android:text="@string/ziliao_title_add" />

            <EditText
                android:id="@+id/add_zi_liao_title"
                style="@style/EditextStye"
                android:hint="@string/ziliao_title_add_hit"
                android:background="@drawable/com_tenpay_android_edit_focus" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/textStye"
                android:text="@string/ziliao_classes_add" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip" >

                <Spinner
                    android:id="@+id/add_clsses_name_spinner_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_toLeftOf="@+id/add_clsses_name_iv"
                    android:entries="@array/classes"
                    android:prompt="@string/spin_prompt"
                    android:background="@drawable/abs__spinner"
                    android:gravity="center" />

                <ImageView
                    android:id="@+id/add_clsses_name_iv"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:src="@drawable/note_add_green" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/add_zi_liao_desc_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:gravity="top"
                android:hint="@string/ziliao_desc_add_hit"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:minLines="6"
                android:scrollbars="vertical" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="#ffffff"
            android:gravity="center"
            android:padding="10dip" >

            <TextView
                android:id="@+id/add_zi_liao_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ziliao_photo_add"
                android:textColor="#000000"
                android:textSize="20dip" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/abc_ic_go_search_api_holo_light" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/add_zi_liao_show_photo_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dip"
                android:background="#000000" />

            <!-- <LinearLayout -->
            <!-- android:id="@+id/add_zi_liao_photo_container" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="100dp" -->
            <!-- android:layout_margin="5dip" -->
            <!-- android:clipChildren="false" -->
            <!-- android:layerType="software" -->
            <!-- android:orientation="horizontal" > -->


            <!-- <android.support.v4.view.ViewPager -->
            <!-- android:id="@+id/add_zi_liao_show_photo" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="match_parent" -->
            <!-- android:layout_marginRight="220dp" -->
            <!-- android:clipChildren="false" > -->
            <!-- </android.support.v4.view.ViewPager> -->
            <!-- </LinearLayout> -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/id_recyclerview_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_centerVertical="true"
                    android:scrollbars="none" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>