<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/top_bar_bg" >

            <TextView
                style="@style/textStye"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/xiang_qing_title"
                android:textColor="#ffffff" />
        <LinearLayout 
            android:id="@+id/zi_liao_xiang_qing_back_ll"
            android:layout_width="50dip"
            android:layout_height="match_parent"
            android:gravity="center">
                        <ImageButton
                android:id="@+id/zi_liao_xiang_qing_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/back" />
            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.0dip"
                android:orientation="vertical" >
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:layout_marginTop="10dip"
                        android:layout_marginBottom="10dip" >

                        <TextView
                            android:id="@+id/show_title_tv"
                            style="@style/textStye"
                            android:layout_centerVertical="true"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="@string/home_title" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dip"
                        android:background="#000000" />

                    <LinearLayout
                        android:id="@+id/show_photos_ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dip"
                        android:background="#ffffff"
                        android:orientation="vertical"
                        android:padding="10dip"
                        android:visibility="gone" >

                        <com.risesoft.lifeassite.util.MyGrideView
                            android:id="@+id/show_photos_gv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:columnWidth="90dp"
                            android:gravity="center"
                            android:horizontalSpacing="10dp"
                            android:numColumns="1"
                            android:stretchMode="columnWidth"
                            android:verticalSpacing="10dp" >
                        </com.risesoft.lifeassite.util.MyGrideView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.0dip"
                        android:layout_marginTop="5dip"
                        android:layout_weight="1"
                        android:padding="10dip" >

                        <TextView
                            android:id="@+id/show_content_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/ziliao_desc_add_hit"
                            android:textSize="18dip" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.risesoft.lifeassite.util.HackyViewPager
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:visibility="gone" />

    <TextView
        android:id="@+id/xq_ye_shu"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:gravity="center"
        android:text="页数"
        android:textColor="#ffffff"
        android:textSize="20dip"
        android:visibility="invisible" />

</FrameLayout>